Crash in Surface Deform modifier Bind when Dynamic Paint is included #59631

Closed
opened 2018-12-19 19:07:44 +01:00 by jesus lamas · 7 comments

System Information
Operating system: Windows 10
Graphics card: Intel Graphics

Blender Version
Broken: Blender 2.8 Beta, hash: fd42fe6616, Date: 2018-12-19 01:30

Blender seems to crash when adding both a dynamic paint & surface deform
modifier. It works when it is just the surface deform, but should also work along with other modifiers.

Add a UV sphere > Duplicate(don't move) > Add Dynamic Paint & Surface Deform modifier to original Sphere > Set duplicate sphere as target & bind > Blender Crashes..

**System Information** Operating system: Windows 10 Graphics card: Intel Graphics **Blender Version** Broken: Blender 2.8 Beta, hash: fd42fe66161, Date: 2018-12-19 01:30 Blender seems to crash when adding both a dynamic paint & surface deform modifier. It works when it is just the surface deform, but should also work along with other modifiers. Add a UV sphere > Duplicate(don't move) > Add Dynamic Paint & Surface Deform modifier to original Sphere > Set duplicate sphere as target & bind > Blender Crashes..
Author

Added subscriber: @jesus650rwc

Added subscriber: @jesus650rwc

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2018-12-21 12:26:43 +01:00

Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x0000555557f64af0 in copy_v3_v3 (r=0x7fffd403c008, a=0x0)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_vector_inline.c:66
66		r[0] = a[0];
(gdb) bt
#0  0x0000555557f64af0 in copy_v3_v3 (r=0x7fffd403c008, a=0x0)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_vector_inline.c:66
#1  0x0000555557f6a34e in BKE_mesh_vertexCos_get (me=0x7fffd4b9b908, r_verts_len=0x7fffffffcfb8)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/mesh.c:1226
#2  0x0000555557e2d6f9 in mesh_calc_modifiers (depsgraph=0x7fffdc83ba08, scene=0x7fffeab73008, ob=0x7fffd4feba08, inputVertexCos=0x0, useDeform=1,
    need_mapping=false, dataMask=0, index=-1, useCache=false, build_shapekey_layers=false, r_deform=0x0, r_final=0x7fffffffd3c0)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:1371
#3  0x0000555557e30ba7 in mesh_create_eval_final_view (depsgraph=0x7fffdc83ba08, scene=0x7fffeab73008, ob=0x7fffd4feba08, dataMask=0)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:2347
#4  0x000055555755b6a8 in object_force_modifier_update_for_bind (depsgraph=0x7fffdc83ba08, scene=0x7fffeab73008, ob=0x7fffd4feba08)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/object/object_modifier.c:105
#5  0x00005555575640e7 in surfacedeform_bind_exec (C=0x7fffefc30288, op=0x7fffd1ffe388)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/object/object_modifier.c:2355
#6  0x000055555756415c in surfacedeform_bind_invoke (C=0x7fffefc30288, op=0x7fffd1ffe388, UNUSED_event=0x7fffe8e22c88)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/object/object_modifier.c:2367
#7  0x000055555704ed50 in wm_operator_invoke (C=0x7fffefc30288, ot=0x7fffea90c108, event=0x7fffe8e22c88, properties=0x7fffffffd660, reports=0x0,
    poll_only=false, use_last_properties=true) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1327
#8  0x000055555704f670 in wm_operator_call_internal (C=0x7fffefc30288, ot=0x7fffea90c108, properties=0x7fffffffd660, reports=0x0, context=0, poll_only=false,
    event=0x7fffe8e22c88) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1570
#9  0x000055555704f72d in WM_operator_name_call_ptr (C=0x7fffefc30288, ot=0x7fffea90c108, context=0, properties=0x7fffffffd660)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1582
#10 0x0000555557387a43 in ui_apply_but_funcs_after (C=0x7fffefc30288)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_handlers.c:769
#11 0x00005555573a0597 in ui_handler_region_menu (C=0x7fffefc30288, event=0x7fffd4847d88, UNUSED_userdata=0x7fffeabc5f08)
    at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_handlers.c:9801
#12 0x000055555704cbce in wm_handler_ui_call (C=0x7fffefc30288, handler=0x7fffd1ffdf08, event=0x7fffd4847d88, always_pass=0)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:573
#13 0x0000555557051798 in wm_handlers_do_intern (C=0x7fffefc30288, event=0x7fffd4847d88, handlers=0x7fffeaa829a0)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2374
#14 0x0000555557052161 in wm_handlers_do (C=0x7fffefc30288, event=0x7fffd4847d88, handlers=0x7fffeaa829a0)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2607
#15 0x0000555557053518 in wm_event_do_handlers (C=0x7fffefc30288)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2997
- 16 0x0000555557048289 in WM_main (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:427
- 17 0x0000555557042bee in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:521

It seems like me->mvert- [x].co generates a NULL pointer in blenkernel/intern/mesh.c.
Guessing this is depsgraph related...

Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x0000555557f64af0 in copy_v3_v3 (r=0x7fffd403c008, a=0x0) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_vector_inline.c:66 66 r[0] = a[0]; (gdb) bt #0 0x0000555557f64af0 in copy_v3_v3 (r=0x7fffd403c008, a=0x0) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_vector_inline.c:66 #1 0x0000555557f6a34e in BKE_mesh_vertexCos_get (me=0x7fffd4b9b908, r_verts_len=0x7fffffffcfb8) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/mesh.c:1226 #2 0x0000555557e2d6f9 in mesh_calc_modifiers (depsgraph=0x7fffdc83ba08, scene=0x7fffeab73008, ob=0x7fffd4feba08, inputVertexCos=0x0, useDeform=1, need_mapping=false, dataMask=0, index=-1, useCache=false, build_shapekey_layers=false, r_deform=0x0, r_final=0x7fffffffd3c0) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:1371 #3 0x0000555557e30ba7 in mesh_create_eval_final_view (depsgraph=0x7fffdc83ba08, scene=0x7fffeab73008, ob=0x7fffd4feba08, dataMask=0) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:2347 #4 0x000055555755b6a8 in object_force_modifier_update_for_bind (depsgraph=0x7fffdc83ba08, scene=0x7fffeab73008, ob=0x7fffd4feba08) at /home/zed/programmering/blender_master/blender/source/blender/editors/object/object_modifier.c:105 #5 0x00005555575640e7 in surfacedeform_bind_exec (C=0x7fffefc30288, op=0x7fffd1ffe388) at /home/zed/programmering/blender_master/blender/source/blender/editors/object/object_modifier.c:2355 #6 0x000055555756415c in surfacedeform_bind_invoke (C=0x7fffefc30288, op=0x7fffd1ffe388, UNUSED_event=0x7fffe8e22c88) at /home/zed/programmering/blender_master/blender/source/blender/editors/object/object_modifier.c:2367 #7 0x000055555704ed50 in wm_operator_invoke (C=0x7fffefc30288, ot=0x7fffea90c108, event=0x7fffe8e22c88, properties=0x7fffffffd660, reports=0x0, poll_only=false, use_last_properties=true) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1327 #8 0x000055555704f670 in wm_operator_call_internal (C=0x7fffefc30288, ot=0x7fffea90c108, properties=0x7fffffffd660, reports=0x0, context=0, poll_only=false, event=0x7fffe8e22c88) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1570 #9 0x000055555704f72d in WM_operator_name_call_ptr (C=0x7fffefc30288, ot=0x7fffea90c108, context=0, properties=0x7fffffffd660) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:1582 #10 0x0000555557387a43 in ui_apply_but_funcs_after (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_handlers.c:769 #11 0x00005555573a0597 in ui_handler_region_menu (C=0x7fffefc30288, event=0x7fffd4847d88, UNUSED_userdata=0x7fffeabc5f08) at /home/zed/programmering/blender_master/blender/source/blender/editors/interface/interface_handlers.c:9801 #12 0x000055555704cbce in wm_handler_ui_call (C=0x7fffefc30288, handler=0x7fffd1ffdf08, event=0x7fffd4847d88, always_pass=0) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:573 #13 0x0000555557051798 in wm_handlers_do_intern (C=0x7fffefc30288, event=0x7fffd4847d88, handlers=0x7fffeaa829a0) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2374 #14 0x0000555557052161 in wm_handlers_do (C=0x7fffefc30288, event=0x7fffd4847d88, handlers=0x7fffeaa829a0) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2607 #15 0x0000555557053518 in wm_event_do_handlers (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2997 - 16 0x0000555557048289 in WM_main (C=0x7fffefc30288) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:427 - 17 0x0000555557042bee in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:521 ``` It seems like `me->mvert- [x].co` generates a NULL pointer in `blenkernel/intern/mesh.c`. Guessing this is depsgraph related...
Sergey Sharybin removed their assignment 2018-12-21 12:34:23 +01:00
Bastien Montagne was assigned by Sergey Sharybin 2018-12-21 12:34:23 +01:00

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey

This is not a dependency graph related, at least not immediatelly related to it. This is an operator.

@mont29, mind having a look? You did some refactor quite recently in the area. Not sure whether something got broken in library/cow-related areas since your fixes there?

This is not a dependency graph related, at least not immediatelly related to it. This is an operator. @mont29, mind having a look? You did some refactor quite recently in the area. Not sure whether something got broken in library/cow-related areas since your fixes there?

This issue was referenced by 41b65d9a8e

This issue was referenced by 41b65d9a8ed7f95b6851e6c6e1ef55d52961107d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59631
No description provided.